--- a/src/Components/Product/product.css
+++ b/src/Components/Product/product.css
@@ -80,6 +80,7 @@
 .product .product-info {
     padding: 1rem;
     margin-bottom: 3rem;
+    margin-top: -1rem;
     /* Adjusted padding for consistency */
 }
 .product-info p {
@@ -103,7 +104,7 @@
     width: 100%;
     display: inline-block;
     padding: 0.5rem 1rem;
-    background-color: #ff9900be;
+    background-color: rgba(255, 153, 0, 0.3);
     color: rgb(0, 0, 0);
     text-decoration: none;
     border-radius: 4px;
@@ -113,7 +114,7 @@
 }
 
 .product .button:hover {
-    background-color: #0056b3;
+    background-color: #1C2B35;
     color: #fff;
     /* Adjusted text color on hover */
 }
